python/rregadmin/registry/registry_wrapper.py


# values for enumeration 'HiveType'
HTYPE_UNKNOWN = 0
HTYPE_SAM = 1
HTYPE_SYSTEM = 2
HTYPE_SECURITY = 3
HTYPE_SOFTWARE = 4
HTYPE_USER = 5
HTYPE_USERDIFF = 6
HTYPE_USRCLASS = 7
HTYPE_DEFAULT = 8
HTYPE_UNLOADED = -1
HTYPE_ERROR = -2
HiveType = c_int # enum
# ../../../rregadmin/registry/registry.h 324
registry_contains_hivetype = _libraries['librregadmin.so.1'].registry_contains_hivetype
registry_contains_hivetype.restype = gboolean
# registry_contains_hivetype(in_reg, in_type)
registry_contains_hivetype.argtypes = [POINTER(Registry), HiveType]
registry_contains_hivetype.__doc__ = \
"""gboolean registry_contains_hivetype(unknown * in_reg, HiveType in_type)
../../../rregadmin/registry/registry.h:324"""
# ../../../rregadmin/registry/registry.h 330
registry_id_get_hive = _libraries['librregadmin.so.1'].registry_id_get_hive
registry_id_get_hive.restype = POINTER(Hive)
# registry_id_get_hive(in_reg, in_id)
registry_id_get_hive.argtypes = [POINTER(Registry), hive_id]
registry_id_get_hive.__doc__ = \
"""Hive * registry_id_get_hive(unknown * in_reg, hive_id in_id)
../../../rregadmin/registry/registry.h:330"""
# ../../../rregadmin/registry/registry.h 336
registry_id_get_hive_type = _libraries['librregadmin.so.1'].registry_id_get_hive_type
registry_id_get_hive_type.restype = c_int
# registry_id_get_hive_type(in_reg, in_id)
registry_id_get_hive_type.argtypes = [POINTER(Registry), hive_id]
registry_id_get_hive_type.__doc__ = \
"""int registry_id_get_hive_type(unknown * in_reg, hive_id in_id)
../../../rregadmin/registry/registry.h:336"""
# ../../../rregadmin/registry/registry.h 343
registry_id_get_hive_filename = _libraries['librregadmin.so.1'].registry_id_get_hive_filename
registry_id_get_hive_filename.restype = STRING
# registry_id_get_hive_filename(in_reg, in_id)
registry_id_get_hive_filename.argtypes = [POINTER(Registry), hive_id]
registry_id_get_hive_filename.__doc__ = \
"""unknown * registry_id_get_hive_filename(unknown * in_reg, hive_id in_id)
../../../rregadmin/registry/registry.h:343"""
# ../../../rregadmin/registry/registry.h 349
registry_get_xml_output = _libraries['librregadmin.so.1'].registry_get_xml_output
registry_get_xml_output.restype = gboolean
# registry_get_xml_output(in_reg, in_output)
registry_get_xml_output.argtypes = [POINTER(Registry), POINTER(ustring)]
registry_get_xml_output.__doc__ = \
"""gboolean registry_get_xml_output(unknown * in_reg, ustring * in_output)
../../../rregadmin/registry/registry.h:349"""
# ../../../rregadmin/registry/registry.h 358
registry_get_base_registry_key = _libraries['librregadmin.so.1'].registry_get_base_registry_key
registry_get_base_registry_key.restype = POINTER(RegistryKey)
# registry_get_base_registry_key(in_reg, in_id)
registry_get_base_registry_key.argtypes = [POINTER(Registry), hive_id]
registry_get_base_registry_key.__doc__ = \
"""unknown * registry_get_base_registry_key(unknown * in_reg, hive_id in_id)
../../../rregadmin/registry/registry.h:358"""
__all__ = ['registry_flush_all', 'HTYPE_SYSTEM',
           'registry_get_hive_info', 'registry_path_is_deletable_key',
           'registry_load_hive', 'RegistryOption', 'HTYPE_USRCLASS',
           'registry_unload_all_force', 'registry_get_xml_output',
           'registry_path_add_key', 'registry_unload_all',
           'HTYPE_UNLOADED', 'registry_unset_option',
           'registry_id_get_hive_type', 'registry_set_option',
           'HiveType', 'registry_flush', 'HTYPE_SOFTWARE',
           'registry_path_is_value', 'registry_has_option',
           'registry_path_delete_value', 'registry_new',
           'HTYPE_DEFAULT', 'registry_is_dirty',
           'registry_path_get_key', 'registry_unload',
           'REG_OPT_BACKUP', 'registry_path_add_value',
           'REG_OPT_CHECK_HIVES', 'registry_set_dirty', 'HTYPE_SAM',
           'REG_OPT_CHECK_HIVES_WRITE', 'registry_path_delete_key',
           'HTYPE_USER', 'registry_new_win_dir',
           'registry_number_of_hives', 'registry_load_win_dir',
           'registry_path_is_key', 'HTYPE_ERROR',
           'registry_id_get_hive', 'registry_get_base_registry_key',
           'registry_free', 'HTYPE_USERDIFF', 'HTYPE_UNKNOWN',
           'REG_OPT_CHECK_HIVES_READ', 'HTYPE_SECURITY',
           'registry_load_hive_full', 'registry_get_registry_key',
           'registry_contains_hivetype',
           'registry_id_get_hive_filename',
           'registry_find_registry_key', 'registry_path_get_value']
